# FocusTogether

./: .gitignore  .replit  .user-config.json  AGENT_CONTEXT.md  AGENT_HANDOFF.md  DEV_NOTES.md  MERGE_ROUTES_GUIDE.md  README.md  REPLIT_AGENT_PROMPT.md  REPLIT_ALERT_CODE_TO_ADD.md  REPLIT_GET_ENDPOINT_CHECK.md  SYNC_GUIDE.md  TAURI_SETUP.md  WINDOWS_LAPTOP_AGENT_PROMPT.md  design_guidelines.md  package-lock.json  package.json  replit.md  vite.config.ts
.github/workflows/: build-mac.yml  build-windows.yml
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--55-minutes-ago-Decided-on-MVP-feature-completion-I-ll-help-you-complete-the-remaining-MVP-features-1764231723711_1764231723713.txt  Pasted-Hi-I-want-to-refine-our-implementation-plan-for-the-Focusmate-style-web-app-MVP-Please-update-the-1763962473654_1763962473655.txt
browser-extension/: background.js  manifest.json  popup.html  popup.js
client/: distraction-warning.html  index.html  notification.html  participant-alert.html  session-ending.html  startup-notification.html
client/public/: notification-particles.js  notification-shared.css
client/src/: App.tsx  index.css  main.tsx  notification-particles.ts  notification-shell.css  notification.html
client/src/components/: LiveKitSession.tsx  VideoGrid.tsx  friends-stats-nav.tsx  notification-bell.tsx  stacked-avatars.tsx
client/src/components/legal/: legal-doc-layout.tsx
client/src/contexts/: session-client-context.tsx
client/src/hooks/: useAuth.ts  useIdleWarning.ts  useIdleWarning.ts.user1  useProductivityMonitor.ts
client/src/lib/: activity-session.ts  config.ts  desktop-deep-link.ts  download.ts  queryClient.ts  session-client.ts  webrtc-mesh.ts  webrtc.ts
client/src/pages/: calendar.tsx  download.tsx  free-rooms.tsx  friends.tsx  history.tsx  home.tsx  landing.tsx  profile.tsx  search.tsx  session.tsx  status.tsx  waiting.tsx  your-stats.tsx
client/src/pages/legal/: privacy.tsx  terms.tsx
info/: CURSOR_ARCHITECHTURE.md  DESKTOP_APPS_ENDPOINT.md  REPLIT_CHANGES.md  crash log.md  replit.md
native-host/: Cargo.toml  compute-extension-id.py  install.sh
native-host/src/: main.rs
scripts/: compare-routes.sh  force-copy-182.ps1  force-copy-183.ps1  force-install-flowlocked.ps1  install-mac.sh  launch-two-users.sh  prepare-zirain-icon-runner.cjs  prepare-zirain-icon.ps1  rename-mac-dmg.mjs  start-vite-if-needed.sh  sync-tray-icon.cjs  tauri-dev-no-vite.sh
server/: app-categorizer.ts  app.ts  env-loader.ts  index-dev.ts  profanity-filter.ts  replitAuth.ts  river-server.ts  routes.ts  session-manager.ts  storage.ts  stripeClient.ts
shared/: river-schema.ts  schema.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_title_target.rs  browser_url.rs  diagnostic_log.rs  main.rs
src-tauri/src/window_monitor/: history.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/windows/: installer-license.rtf
