[package]
name = "focustogether"
version = "0.1.0"
description = "FocusTogether Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
  tauri = { version = "1.5", features = [ "cli", "http-all", "shell-open", "notification-all", "system-tray"] }
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  user-idle = "0.6"
  chrono = { version = "0.4", features = ["serde"] }
  tauri-plugin-deep-link = "0.1"
  dirs = "5.0"
  active-win-pos-rs = "0.8"
  reqwest = { version = "0.11", features = ["blocking", "json"] }
  cocoa = "0.25"
  objc = "0.2"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

