[package]
name = "focustogether"
version = "0.1.0"
description = "Flowlocked Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
  tauri = { version = "1.5", features = [ "cli", "http-all", "shell-open", "notification-all", "system-tray", "macos-private-api", "window-close"] }
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  user-idle = "0.6"
  chrono = { version = "0.4", features = ["serde"] }
  tauri-plugin-deep-link = "0.1"
  dirs = "5.0"
  active-win-pos-rs = "0.8"
  reqwest = { version = "0.11", features = ["blocking", "json"] }
  tokio = { version = "1", features = ["time"] }
  url = "2.5"
sysinfo = "0.38.4"

[target.'cfg(target_os = "macos")'.dependencies]
  cocoa = "0.25"
  objc = "0.2"
  accessibility = "0.1"
  core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.3"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

